# tauri-plugin-macos-haptics

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
example/: .gitignore  Cargo.toml  app.config.timestamp_1724461667136.js  app.config.ts  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
example/src/: styles.css
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: main.json
example/src-tauri/src/: lib.rs
example/src/components/: step-slider.tsx
example/src/icons/: github.tsx
example/src/routes/: index.tsx
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_supported.toml  perform.toml
permissions/schemas/: schema.json
src/: binding_handle.rs  commands.rs  haptics.rs  lib.rs
