[package]
name = "macos-haptics-example"
version = "0.0.0"
description = "Quantum template: with batteries included."
authors = ["you"]
license = ""
repository = "https://github.com/itseeleeya/tauri-plugin-macos-haptics"
edition = "2021"

[lib]
name = "quantum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-macos-haptics = { path = "../../" }


# Optimize for smaller binary size
[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
